--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>平台文档</title>
     <meta name="description" content="Just playing around">
-    <link rel="icon" href="/trhtdocs/logo.jpg">
+    <link rel="icon" href="logo.png">
     
-    <link rel="preload" href="/trhtdocs/assets/css/0.styles.ae9ca88e.css" as="style"><link rel="preload" href="/trhtdocs/assets/js/app.dec78c0f.js" as="script"><link rel="preload" href="/trhtdocs/assets/js/4.301d19de.js" as="script"><link rel="prefetch" href="/trhtdocs/assets/js/10.bdb7dd08.js"><link rel="prefetch" href="/trhtdocs/assets/js/11.74e4eb3d.js"><link rel="prefetch" href="/trhtdocs/assets/js/12.bf911f8e.js"><link rel="prefetch" href="/trhtdocs/assets/js/13.f88e2f1c.js"><link rel="prefetch" href="/trhtdocs/assets/js/14.4f6fe61f.js"><link rel="prefetch" href="/trhtdocs/assets/js/15.517ba725.js"><link rel="prefetch" href="/trhtdocs/assets/js/2.60c9643b.js"><link rel="prefetch" href="/trhtdocs/assets/js/3.63081c82.js"><link rel="prefetch" href="/trhtdocs/assets/js/5.ea072f36.js"><link rel="prefetch" href="/trhtdocs/assets/js/6.b21cb9d0.js"><link rel="prefetch" href="/trhtdocs/assets/js/7.ddbac571.js"><link rel="prefetch" href="/trhtdocs/assets/js/8.8d1e00c0.js"><link rel="prefetch" href="/trhtdocs/assets/js/9.a75cc761.js">
-    <link rel="stylesheet" href="/trhtdocs/assets/css/0.styles.ae9ca88e.css">
+    <link rel="preload" href="/my-docs/assets/css/0.styles.7780d1b1.css" as="style"><link rel="preload" href="/my-docs/assets/js/app.ccb3cef0.js" as="script"><link rel="preload" href="/my-docs/assets/js/4.ad728df3.js" as="script"><link rel="prefetch" href="/my-docs/assets/js/10.4a2615a7.js"><link rel="prefetch" href="/my-docs/assets/js/11.d8939cb7.js"><link rel="prefetch" href="/my-docs/assets/js/12.3e9e9ba7.js"><link rel="prefetch" href="/my-docs/assets/js/13.7fdf8ce9.js"><link rel="prefetch" href="/my-docs/assets/js/14.e639e25d.js"><link rel="prefetch" href="/my-docs/assets/js/15.3aa81bbe.js"><link rel="prefetch" href="/my-docs/assets/js/16.bcc1b39e.js"><link rel="prefetch" href="/my-docs/assets/js/2.065d6d67.js"><link rel="prefetch" href="/my-docs/assets/js/3.88c809db.js"><link rel="prefetch" href="/my-docs/assets/js/5.4b4e4152.js"><link rel="prefetch" href="/my-docs/assets/js/6.b31968ac.js"><link rel="prefetch" href="/my-docs/assets/js/7.48196fbf.js"><link rel="prefetch" href="/my-docs/assets/js/8.7fb6c940.js"><link rel="prefetch" href="/my-docs/assets/js/9.b31ff726.js">
+    <link rel="stylesheet" href="/my-docs/assets/css/0.styles.7780d1b1.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/trhtdocs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/trhtdocs/assets/js/app.dec78c0f.js" defer></script><script src="/trhtdocs/assets/js/4.301d19de.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/my-docs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/my-docs/assets/js/app.ccb3cef0.js" defer></script><script src="/my-docs/assets/js/4.ad728df3.js" defer></script>
   </body>
 </html>
